--- a/New folder/Client/src/Components/styles/EventPartial.module.css
+++ b/New folder/Client/src/Components/styles/EventPartial.module.css
@@ -1,10 +1,14 @@
 .e-container{
-    padding: 10px 100px;
+    position: relative;
+    width: 80vw;
+    margin: auto;
     border-bottom: 1px solid #cecece;
 }
 @media screen and (min-width:1281px) {
     .e-container{
-        padding: 10px 300px;
+        width: 70vw;
+        position: relative;
+        margin: auto;
     }
 }
 .event-cont{
@@ -95,6 +99,7 @@
 }
 
 .back-btn{
+    z-index: 15;
     cursor: pointer;
     transition: 250ms;
     background-color: #fff;
@@ -105,6 +110,7 @@
     border-radius: 4px;
     color: #ee575d;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 .back-btn:hover{
     background-color: #f5d2d3;
